# matxin-fin

./: AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac  matxin-fin.fin.deprlx
dev/: apertium-fin.text
